deployment/ingress/ingress-routes.yaml
apiVersion: networking.k8s.io/v1beta1 
kind: Ingress
metadata:
  name: calculation-offer-service
  labels:
    kiamol: scbtraining
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: calculationservices.scb.com
    http:
      paths:
      - path: /(|$)(.*)
        backend:
          serviceName: casestudy-calcandofferservice-service
          servicePort: 8080
      - path: /v1(/|$)(.*)
        backend:
          serviceName: casestudy-calcandofferservice-service
          servicePort: 8080
      - path: /v2(/|$)(.*)
        backend:
          serviceName: casestudy-calcandofferservice-servicev2
          servicePort: 8080
